Devtools Contrast Correction (order-confirmation.html)

--- a/project/styles/large.css
+++ b/project/styles/large.css
@@ -1005,7 +1005,7 @@ footer .footer-bottom {
 
 .confirmation-container a {
     text-decoration: none;
-    color: var(--tangerine);
+    color: var(--blacktone);
     font-weight: bold;
 }
 
